# AIGIBench

./: .gitignore  README.md  evaluate_detectors.py  pyproject.toml
detector_codes/: README.md
detector_codes/AIDE-main/: engine_finetune.py  main_finetune.py  utils.py
detector_codes/C2P-CLIP-DeepfakeDetection-main/: decode_clipfeature_dataset.py  draw_tsne_kmean.py  inference.py  requirements.txt  train.py  train_aigibench.py  train_aigibench.sh  validate.py
detector_codes/C2P-CLIP-DeepfakeDetection-main/data/: __init__.py  datasets.py
detector_codes/C2P-DINOv2-main/: model.py  train.py
detector_codes/C2P-DINOv3-main/: dataset.py  model.py  train.py
detector_codes/CLIPDetection-main/: test.py  train.py
detector_codes/CNNDetection-master/: demo.py  demo_dir.py  eval.py  eval_config.py  train.py  util.py  validate.py
detector_codes/DFFreq-main/: test.py  train.py  util.py  validate.py
detector_codes/Effort-AIGI-Detection/: test.py  train.py  util.py  validate.py
detector_codes/FreqNet-DeepfakeDetection-main/: test.py  train.py  util.py
detector_codes/Gram-Net-main/: test.py  train.py  validate.py
detector_codes/NPR-DeepfakeDetection-main/: test.py  train.py  validate.py
detector_codes/RIGID-main/: rigid_detector.py
detector_codes/RealTime-DeepfakeDetection-in-the-RealWorld-main/: earlystop.py  extract_patches.py  test.py  test_config.py  train.py  train_Tiny_LaDeDa.py  util.py  validate.py
detector_codes/Resnet50-main/: test.py
detector_codes/SAFE-main/: engine_finetune.py  main_finetune.py  optim_factory.py  utils.py
(+21 files in other folders)
